admission/ValidatingAdmissionPolicy/policies/windows-hostprocess/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-hostprocess-containers
  annotations:
    kubeapt.io/uuid: "6dd987f5-a988-40f2-bce8-d6eef4c6eb4d"
spec:
  hostNetwork: true
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      windowsOptions:
        hostProcess: true
  os:
    name: windows
